<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sorting</string>
    <string name="action_settings">Settings</string>
    <string name="bubble_name">Bubble Sort</string>
    <string name="insertion_name">Insertion Sort</string>
    <string name="selection_name">Selection Sort</string>
    <string name="merge_name">Merge Sort</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="stop">Stop</string>
    <string name="index1">i = 0</string>
    <string name="index2">j = 0</string>
    <string name="index3">k = 0</string>
    <string name="lowest">lowest</string>
    <string name="key">key</string>
    <string name="title_activity_sorters">Sorters</string>
    <string name="array_sorted">Array sorted!</string>

</resources>