<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Sorters" >

    <Switch
        android:id="@+id/sw_automatic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/automatic"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1" >

        <TextView
            android:id="@+id/txt_bubble"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_row="0"
            android:drawableTop="@drawable/bubble_icon"
            android:text="@string/bubble_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txt_selection"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_row="1"
            android:drawableTop="@drawable/selection_icon"
            android:text="@string/selection_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txt_insertion"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_row="2"
            android:drawableTop="@drawable/insertion_icon"
            android:text="@string/insertion_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txt_merge"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_row="3"
            android:drawableTop="@drawable/merge_icon"
            android:text="@string/merge_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </GridLayout>

</LinearLayout>